<?xml version="1.0" encoding="utf-8"?>
<app:com.google.android.flexbox.FlexboxLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:flexDirection="row"
    app:flexWrap="wrap"
    app:justifyContent="space_around"
    app:alignItems="center">
  <TextView
      style="@style/AttrItem"
      app:layout_flexBasisPercent="100%"
      android:gravity="left|center_vertical"
      android:paddingLeft="10dp"
      android:paddingRight="10dp"
      android:textSize="18sp"
      android:textColor="@android:color/holo_red_light"
      android:text="@string/layout_attr_title"/>
  <TextView
      style="@style/AttrItem"
      app:layout_flexBasisPercent="40%"
      android:text="@string/layout_attr_direction"/>
  <android.support.v7.widget.AppCompatSpinner
      android:id="@+id/direction_selector"
      style="@style/AttrItem"
      app:layout_flexBasisPercent="60%"/>
  <TextView
      style="@style/AttrItem"
      app:layout_flexBasisPercent="40%"
      android:text="@string/layout_attr_warp"/>
  <android.support.v7.widget.AppCompatSpinner
      android:id="@+id/flexwarp_selector"
      style="@style/AttrItem"
      app:layout_flexBasisPercent="60%"/>
  <TextView
      style="@style/AttrItem"
      app:layout_flexBasisPercent="40%"
      android:text="@string/layout_attr_justify_content"/>
  <android.support.v7.widget.AppCompatSpinner
      android:id="@+id/justify_selector"
      style="@style/AttrItem"
      app:layout_flexBasisPercent="60%"/>
  <TextView
      style="@style/AttrItem"
      app:layout_flexBasisPercent="40%"
      android:text="@string/layout_attr_align_items"/>
  <android.support.v7.widget.AppCompatSpinner
      android:id="@+id/align_selector"
      style="@style/AttrItem"
      app:layout_flexBasisPercent="60%"/>
  <TextView
      style="@style/AttrItem"
      app:layout_flexBasisPercent="40%"
      android:text="@string/layout_attr_align_content"/>
  <android.support.v7.widget.AppCompatSpinner
      android:id="@+id/content_selector"
      style="@style/AttrItem"
      app:layout_flexBasisPercent="60%"/>


</app:com.google.android.flexbox.FlexboxLayout>